--- a/stories/gu/0093_મારો-બાબ્લો.html
+++ b/stories/gu/0093_મારો-બાબ્લો.html
@@ -63,6 +63,8 @@ Cissy Namugerwa, Nanyonga Allen<br>ગુજરાતી</div><div class="pagebr
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/04.jpg" /></p>
 
+<p>નાસ્તા ખઐને તે એક મિત્ર સાથે રમવા જાયે.</p>
+
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
