--- a/stories/no/0095_zama-er-flink.html
+++ b/stories/no/0095_zama-er-flink.html
@@ -57,7 +57,7 @@ Jeg våkner tidlig, fordi jeg er flink!</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
 
-<p>Jeg er den som slipper inn solen.</p>
+<p>Jeg er den som slipper solen inn.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
