--- a/stories/no/0360_å-telle-katter_slides.html
+++ b/stories/no/0360_å-telle-katter_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <h2 id="å-telle-katter-1">Å telle katter</h2>
-<strong>Tekst:</strong> Nina Orange<br> <strong>Illustrasjoner:</strong> Jesse Breytenbach<br> <strong>Oversettelse:</strong> <br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Nina Orange<br> <strong>Illustrasjoner:</strong> Jesse Breytenbach<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
 Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
