--- a/stories/gu/0093_મારો-બાબ્લો_slides.html
+++ b/stories/gu/0093_મારો-બાબ્લો_slides.html
@@ -115,6 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/04.jpg" /></p>
+<p>નાસ્તા ખઐને તે એક મિત્ર સાથે રમવા જાયે.</p>
 <center>
 <strong>3</strong>
 </center>
