--- a/stories/no/0095_zama-er-flink_slides.html
+++ b/stories/no/0095_zama-er-flink_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>Jeg er den som slipper inn solen.</p>
+<p>Jeg er den som slipper solen inn.</p>
 <center>
 <strong>2</strong>
 </center>
