--- a/stories/no/0360_å-telle-katter.html
+++ b/stories/no/0360_å-telle-katter.html
@@ -124,7 +124,7 @@ Nina Orange<br>norsk</div><div class="pagebreak">
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Nina Orange<br /><strong>Illustrasjoner:</strong> Jesse Breytenbach<br /><strong>Oversettelse:</strong> <br /><strong>Språk:</strong> norsk</p>
+<p><strong>Tekst:</strong> Nina Orange<br /><strong>Illustrasjoner:</strong> Jesse Breytenbach<br /><strong>Oversettelse:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> norsk</p>
 <p>Denne fortellingen kommer fra <a href="https://global-asp.github.io/">Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href="http://africanstorybook.org/">African Storybook Project</a> til alle verdens språk.<p>Du kan se den originale fortellingen på ASP-websida <a href="http://my.africanstorybook.org/stories/counting-cats">her</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
