--- a/stories/zh/0004_山羊、野狗、和水牛.html
+++ b/stories/zh/0004_山羊、野狗、和水牛.html
@@ -63,7 +63,7 @@ Fabian Wakholi<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
 
-<p>野狗没有带零钱，所以他就给多了一点儿。</p>
+<p>野狗没有带零钱，所以他就多给了一点儿。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
