--- a/stories/zh/0004_山羊、野狗、和水牛_slides.html
+++ b/stories/zh/0004_山羊、野狗、和水牛_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>野狗没有带零钱，所以他就给多了一点儿。</p>
+<p>野狗没有带零钱，所以他就多给了一点儿。</p>
 <center>
 <strong>3</strong>
 </center>
