--- a/stories/index.html
+++ b/stories/index.html
@@ -937,6 +937,12 @@
       <td><a name="gu0053"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0057</td>
+      <td><a href="/stories/gu/0057_-સાને-માર્કીટે-છે_slides.html" target="_blank">સાને માર્કીટે છે</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0057"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/gu/0067_રસોઈ_slides.html" target="_blank">રસોઈ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1019,6 +1025,12 @@
       <td><a href="/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે_slides.html" target="_blank">આશા એક મગફળિ-મખન નું સેંડવિચ છે.</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0192"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0206</td>
+      <td><a href="/stories/gu/0206_દાંત_slides.html" target="_blank">દાંત</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0206"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -1934,7 +1946,7 @@
       <td>0057</td>
       <td><a href="http://my.africanstorybook.org/stories/sane-market">Sane in the market</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#zh0057">zh</a></td>
+      <td><a href="#gu0057">gu</a>, <a href="#zh0057">zh</a></td>
     </tr>
     <tr>
       <td>0064</td>
@@ -2120,7 +2132,7 @@
       <td>0206</td>
       <td><a href="http://my.africanstorybook.org/stories/teeth">Teeth</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#nn0206">nn</a>, <a href="#no0206">no</a>, <a href="#yue0206">yue</a>, <a href="#zh0206">zh</a></td>
+      <td><a href="#gu0206">gu</a>, <a href="#nn0206">nn</a>, <a href="#no0206">no</a>, <a href="#yue0206">yue</a>, <a href="#zh0206">zh</a></td>
     </tr>
     <tr>
       <td>0210</td>
