--- a/jukebox/index.html
+++ b/jukebox/index.html
@@ -21,7 +21,7 @@
     <h1>Storybook Jukebox</h1>
 
     <div id="player_container">
-      <div id="title_div">&nbsp;</div>
+      <div id="title_div" onclick="switch_lang()">&nbsp;</div>
       <div id="audio_item">&nbsp;</div>
       <div id="image_div">&nbsp;</div>
       <div id="story_text" onclick="switch_lang()">&nbsp;</div>
