--- a/stories/index.html
+++ b/stories/index.html
@@ -692,7 +692,7 @@
     </tr>
     <tr>
       <td>0320</td>
-      <td><a href="/stories/zh/0320_你在做什么？_slides.html" target="_blank">你在做什么？</a></td>
+      <td><a href="/stories/zh/0320_你在做什么_slides.html" target="_blank">你在做什么？</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0320"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
