--- a/audio/index.html
+++ b/audio/index.html
@@ -36,7 +36,11 @@
             <li><a href="zh/0057_萨内在商店_audio-slides.html" target="_blank">萨内在商店</a></li>
             <li><a href="zh/0064_乔伊上学_audio-slides.html" target="_blank">乔伊上学</a></li>
             <li><a href="zh/0067_做菜_audio-slides.html" target="_blank">做菜</a></li>
+            <li><a href="zh/0073_数数动物_audio-slides.html" target="_blank">数数动物</a></li>
+            <li><a href="zh/0078_超牛冒险记_audio-slides.html" target="_blank">超牛冒险记</a></li>
+            <li><a href="zh/0084_德马尼和德玛萨尼_audio-slides.html" target="_blank">德马尼和德玛萨尼</a></li>
             <li><a href="zh/0231_气象书_audio-slides.html" target="_blank">气象书</a></li>
+            <li><a href="zh/0248_我去动物园_audio-slides.html" target="_blank">我去动物园</a></li>
           </ul>
         <h3>Esperanto</h3>
           <ul>
@@ -89,6 +93,14 @@
             <li><a href="fa/0253_کتاب-عکس-دار_audio-slides.html" target="_blank">کتاب عکس دار</a></li>
             <li><a href="fa/0302_آتش_audio-slides.html" target="_blank">آتش</a></li>
             <li><a href="fa/0309_کوچک-و-بزرگ_audio-slides.html" target="_blank">کوچک و بزرگ</a></li>
+          </ul>
+        <h3>Spanish [Español]</h3>
+          <ul>
+            <li><a href="es/0253_mi-libro-ilustrado_audio-slides.html" target="_blank">Mi libro ilustrado</a></li>
+          </ul>
+        <h3>Swedish [svenska]</h3>
+          <ul>
+            <li><a href="sv/0009_var-är-min-katt_audio-slides.html" target="_blank">Var är min katt?</a></li>
           </ul>
 
   </body>
