add more audio stories (gu)

--- a/audio/index.html
+++ b/audio/index.html
@@ -49,7 +49,12 @@
           </ul>
         <h3>Gujarati [ગુજરાતી]</h3>
           <ul>
+            <li><a href="gu/0003_નિશાડ-ના-કપડા_audio-slides.html" target="_blank">નિશાડ ના કપડા</a></li>
+            <li><a href="gu/0007_પાનિ-ગોત્વાનુ_audio-slides.html" target="_blank">પાનિ ગોત્વાનુ.</a></li>
+            <li><a href="gu/0008_તુ-શુ-કરે-છે_audio-slides.html" target="_blank">તુ શુ કરે છે?</a></li>
+            <li><a href="gu/0009_મારિ-બિલાડી-ક્યાં-છે_audio-slides.html" target="_blank">મારિ બિલાડી ક્યાં છે?</a></li>
             <li><a href="gu/0049_મેઘધનુષ્ય_audio-slides.html" target="_blank">મેઘધનુષ્ય</a></li>
+            <li><a href="gu/0053_આ-હું-છું_audio-slides.html" target="_blank">આ હું છું</a></li>
             <li><a href="gu/0093_મારો-બાબ્લો_audio-slides.html" target="_blank">મારો બાબ્લો</a></li>
             <li><a href="gu/0127_વિવિધ-નાતકો_audio-slides.html" target="_blank">વિવિધ નાતકો</a></li>
           </ul>
