update audio stories

--- a/audio/asp/index.html
+++ b/audio/asp/index.html
@@ -45,5 +45,5 @@
           </ul>
 
   </body>
-  <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0083/11.jpg">Image</a> by Karlien de Villiers (CC-BY). Found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. View or fork this project <a href="https://github.com/global-asp/asp-audio">on GitHub</a>.</p></footer>
+  <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0083/11.jpg">Image</a> by Karlien de Villiers (CC-BY), found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. <a href="https://github.com/yegor256/tacit/">Tacit theme</a> by Yegor Bugayenko. View or fork this project <a href="https://github.com/global-asp/asp-audio">on GitHub</a>.</p></footer>
 </html>
