--- a/audio/index.html
+++ b/audio/index.html
@@ -42,10 +42,12 @@
             <li><a href="zh/0231_气象书_audio-slides.html" target="_blank">气象书</a></li>
             <li><a href="zh/0248_我去动物园_audio-slides.html" target="_blank">我去动物园</a></li>
           </ul>
-        <h3>Esperanto</h3>
+        <h3>Esperanto [Esperanto]</h3>
           <ul>
             <li><a href="eo/0001_altulo_audio-slides.html" target="_blank">Altulo</a></li>
+            <li><a href="eo/0073_nombri-bestojn_audio-slides.html" target="_blank">Nombri bestojn</a></li>
             <li><a href="eo/0112_mia-korpo_audio-slides.html" target="_blank">Mia korpo</a></li>
+            <li><a href="eo/0253_mia_bildlibro_audio-slides.html" target="_blank">Mia bildlibro</a></li>
           </ul>
         <h3>Gujarati [ગુજરાતી]</h3>
           <ul>
@@ -106,8 +108,10 @@
         <h3>Swedish [svenska]</h3>
           <ul>
             <li><a href="sv/0009_var-är-min-katt_audio-slides.html" target="_blank">Var är min katt?</a></li>
+            <li><a href="sv/0087_jag-gillar-att-läsa_audio-slides.html" target="_blank">Jag gillar att läsa!</a></li>
+            <li><a href="sv/0156_den-hungriga-krokodilen_audio-slides.html" target="_blank">Den hungriga krokodilen</a></li>
           </ul>
 
   </body>
-  <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg">Image</a> by Karlien de Villiers (CC-BY). Found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. View or fork this project <a href="https://github.com/global-asp/gasp-audio">on GitHub</a>.</p></footer>
+  <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg">Image</a> by Karlien de Villiers (CC-BY), found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. <a href="https://github.com/yegor256/tacit/">Tacit theme</a> by Yegor Bugayenko. View or fork this project <a href="https://github.com/global-asp/gasp-audio">on GitHub</a>.</p></footer>
 </html>
