add new eo audio

--- a/audio/index.html
+++ b/audio/index.html
@@ -45,9 +45,12 @@
         <h3>Esperanto [Esperanto]</h3>
           <ul>
             <li><a href="eo/0001_altulo_audio-slides.html" target="_blank">Altulo</a></li>
+            <li><a href="eo/0003_lernejaj-vestaĵoj_audio-slides.html" target="_blank">Lernejaj vestaĵoj</a></li>
+            <li><a href="eo/0008_kion-vi-faras_audio-slides.html" target="_blank">Kion vi faras?</a></li>
             <li><a href="eo/0073_nombri-bestojn_audio-slides.html" target="_blank">Nombri bestojn</a></li>
             <li><a href="eo/0112_mia-korpo_audio-slides.html" target="_blank">Mia korpo</a></li>
             <li><a href="eo/0253_mia_bildlibro_audio-slides.html" target="_blank">Mia bildlibro</a></li>
+            <li><a href="eo/0302_fajro_audio-slides.html" target="_blank">Fajro</a></li>
           </ul>
         <h3>Gujarati [ગુજરાતી]</h3>
           <ul>
