fix heading on audio page

--- a/audio/index.html
+++ b/audio/index.html
@@ -89,10 +89,10 @@
             <li><a href="nn/0001_ein-veldig-høg-mann_audio-slides.html" target="_blank">Ein veldig høg mann</a></li>
             <li><a href="nn/0003_skuleklede_audio-slides.html" target="_blank">Skuleklede</a></li>
           </ul>
-        <h3>Persian</h3>
+        <h3>Persian [فارسی]</h3>
           <ul>
             <li><a href="fa/0007_در-جستجوی-آب_audio-slides.html" target="_blank">در جستجوی آب</a></li>
-            <li><a href="fa/0008_چه-کار-داری-میکنی‌_audio-slides.html" target="_blank">چه کار داری میکنی‌</a></li>
+            <li><a href="fa/0008_چه-کار-داری-میکنی‌_audio-slides.html" target="_blank">چه کار داری میکنی‌؟</a></li>
             <li><a href="fa/0049_رنگین-کمان_audio-slides.html" target="_blank">رنگین کمان</a></li>
             <li><a href="fa/0093_پسر-بچه-من_audio-slides.html" target="_blank">پسر بچه من</a></li>
             <li><a href="fa/0127_بازی‌های-گوناگون_audio-slides.html" target="_blank">بازی‌های گوناگون</a></li>
