--- a/stories/or/0049_ଈନ୍ଦ୍ରଧନୁ_slides.html
+++ b/stories/or/0049_ଈନ୍ଦ୍ରଧନୁ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>呢個係我 - Global African Storybook</title>
+  <title>ଈନ୍ଦ୍ରଧନୁ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="呢個係我" class="slide level1">
-<h1>呢個係我</h1>
+<section id="ଈନଦରଧନ" class="slide level1">
+<h1>ଈନ୍ଦ୍ରଧନୁ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/02.jpg" /></p>
-<p>呢個係我張相。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/02.jpg" /></p>
+<p>କେତେ ରଂଗ ତାର</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/03.jpg" /></p>
-<p>我而家六歲。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/03.jpg" /></p>
+<p>ମିଳି ମିଶି ରହନ୍ତି</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/04.jpg" /></p>
-<p>呢張係我屋企人嘅相。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/04.jpg" /></p>
+<p>ଏଇ ଦେଖ ନାରୋଂଗି</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/05.jpg" /></p>
-<p>我最鍾意食炸魚薯條。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/05.jpg" /></p>
+<p>ଏଇ ଦେଖ ନୀଳ</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/06.jpg" /></p>
-<p>我識畫自己隻手。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/06.jpg" /></p>
+<p>ଏଇ ଦେଖ ଲାଲ୍</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/07.jpg" /></p>
-<p>我鍾意跳繩。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0049/07.jpg" /></p>
+<p>ବାଃ କି ସୁଂଦର ଏଇ ରଂଗ ଗୁଡିକ!</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,27 +150,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/08.jpg" /></p>
-<p>我電話號碼係(033) 342-6587。</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="呢個係我-1">呢個係我</h2>
-<strong>文:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>圖:</strong> Kathy Arbuckle<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<h2 id="ଈନଦରଧନ-1">ଈନ୍ଦ୍ରଧନୁ</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald, Wiehan de Jager<br> <strong>Translation:</strong> ରାଜ କିଶୋର<br> <strong>Language:</strong> Odia<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/me'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/rainbow'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
