--- a/stories/index.html
+++ b/stories/index.html
@@ -101,6 +101,8 @@
 
 <li class="toc"><a href="#norwegian-nynorsk">Norwegian (Nynorsk) [nynorsk]</a></li><br>
 
+<li class="toc"><a href="#odia">Odia [ଓଡ଼ିଆ]</a></li><br>
+
 <li class="toc"><a href="#persian">Persian [فارسی]</a></li><br>
 
 <li class="toc"><a href="#russian">Russian [Русский]</a></li><br>
@@ -1582,6 +1584,33 @@
 </table>
 
    </ul>
+  <h3><a name='odia'>Odia [ଓଡ଼ିଆ]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0007</td>
+      <td><a href="/stories/or/0007_ପାଣି-ପାଇଁ-ଖୋଜା_slides.html" target="_blank">ପାଣି ପାଇଁ ଖୋଜା</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXgyMV9KeWtONzQ"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="or0007"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0049</td>
+      <td><a href="/stories/or/0049_ଈନ୍ଦ୍ରଧନୁ_slides.html" target="_blank">ଈନ୍ଦ୍ରଧନୁ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXgyMV9KeWtONzQ"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="or0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
   <h3><a name='persian'>Persian [فارسی]</a></h3>
    <ul><table>
   <thead>
@@ -1904,7 +1933,7 @@
       <td>0007</td>
       <td><a href="http://my.africanstorybook.org/stories/looking-water">Looking for water</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0007">eo</a>, <a href="#es0007">es</a>, <a href="#fa0007">fa</a>, <a href="#gu0007">gu</a>, <a href="#nn0007">nn</a>, <a href="#no0007">no</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
+      <td><a href="#eo0007">eo</a>, <a href="#es0007">es</a>, <a href="#fa0007">fa</a>, <a href="#gu0007">gu</a>, <a href="#nn0007">nn</a>, <a href="#no0007">no</a>, <a href="#or0007">or</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
     </tr>
     <tr>
       <td>0008</td>
@@ -1934,7 +1963,7 @@
       <td>0049</td>
       <td><a href="http://my.africanstorybook.org/stories/rainbow">The Rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
+      <td><a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#or0049">or</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
