--- a/stories/yue/0053_呢個係我.html
+++ b/stories/yue/0053_呢個係我.html
@@ -45,7 +45,7 @@
 
 <h1 id="section">呢個係我</h1>
 
-<br>粵語</div><div class="pagebreak">
+Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0053/02.jpg" /></p>
 
@@ -96,7 +96,7 @@
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>文:</strong> <br /><strong>圖:</strong> Kathy Arbuckle<br /><strong>譯:</strong> dohliam<br /><strong>語言:</strong> 粵語</p>
+<p><strong>文:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>圖:</strong> Kathy Arbuckle<br /><strong>譯:</strong> dohliam<br /><strong>語言:</strong> 粵語</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/me">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
