--- a/jukebox/index.html
+++ b/jukebox/index.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" type="text/css" href="https://yegor256.github.io/tacit/tacit.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/modal.css" />
     <style type="text/css">
+      body {
+        height: 100vh;
+        padding-top: 0;
+        padding-bottom: 0;
+      }
+      h1 {
+        font-size: 2vh;
+        margin: 0;
+      }
+      h1 img {
+        max-width: 3vh;
+      }
+      h1 button {
+        margin: 0;
+      }
+      h2 {
+        font-size: 3.5vh;
+        padding-bottom: 1vh;
+        margin: 0;
+      }
+      #player_container {
+        height: 85vh;
+      }
+      #image_div img {
+        height: 60vh;
+        padding-top: 5vh;
+        margin: 0;
+      }
+      #control_buttons img {
+        width: 5vh;
+        margin: 0;
+      }
+      #control_buttons button {
+        margin: 0;
+      }
+      #story_text {
+        font-size: 3.5vmin;
+      }
       .grey {
         color: #C2BBB8;
       }
@@ -18,14 +56,15 @@
       load_page();
     </script>
   </head>
-  <body onload="window.stories = window['stories_' + lang]; load_player(window.current_track)">
-    <h1 class="grey">Storybook Jukebox <a onclick="show_attribution()" href="#modal-about" class="call-modal" title="Clicking this link shows the modal"><button accesskey="?"><img width="50%" src="img/help.svg" title="Show help"></button></a></h1>
+  <body onload="window.json = 'stories_' + lang; load_player(0, 0)">
+    <h1 class="grey">Storybook Jukebox <a onclick="show_attribution()" href="#modal-about" class="call-modal" title="Clicking this link shows the modal"><button accesskey="?"><img src="img/help.svg" title="Show help"></button></a></h1>
 
     <div id="player_container">
-      <div id="title_div" onclick="switch_lang()">&nbsp;</div>
+      <div id="title_div">&nbsp;</div>
+      <div id="media_controls">&nbsp;</div>
       <div id="audio_item">&nbsp;</div>
       <div id="image_div">&nbsp;</div>
-      <div id="story_text" onclick="switch_lang()">&nbsp;</div>
+      <div id="story_text">&nbsp;</div>
       <div id="playlist">&nbsp;</div>
     </div>
 
