--- a/audio/index.html
+++ b/audio/index.html
@@ -106,7 +106,16 @@
           </ul>
         <h3>Spanish [Español]</h3>
           <ul>
+            <li><a href="es/0006_anansi_y_la_sabiduría_audio-slides.html" target="_blank">Anansi y la sabiduría</a></li>
+            <li><a href="es/0007_buscando-agua_audio-slides.html" target="_blank">Buscando agua</a></li>
+            <li><a href="es/0008_qué-estás-haciendo_audio-slides.html" target="_blank">¿Qué estás haciendo?</a></li>
+            <li><a href="es/0087_me-gusta-leer_audio-slides.html" target="_blank">¡Me gusta leer!</a></li>
+            <li><a href="es/0127_juegos-diferentes_audio-slides.html" target="_blank">Juegos diferentes</a></li>
+            <li><a href="es/0210_tingi-y-las-vacas_audio-slides.html" target="_blank">Tingi y las vacas</a></li>
+            <li><a href="es/0231_el-libro-del-clima_audio-slides.html" target="_blank">El libro del clima</a></li>
             <li><a href="es/0253_mi-libro-ilustrado_audio-slides.html" target="_blank">Mi libro ilustrado</a></li>
+            <li><a href="es/0302_el-fuego_audio-slides.html" target="_blank">El fuego</a></li>
+            <li><a href="es/0327_contar-animales_audio-slides.html" target="_blank">Contar animales</a></li>
           </ul>
         <h3>Swedish [svenska]</h3>
           <ul>
