--- a/stories/es/0006_anansi_y_la_sabiduría.html
+++ b/stories/es/0006_anansi_y_la_sabiduría.html
@@ -70,7 +70,7 @@ Cuento de Ghana<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p>Todo este tiempo el joven hijo de Anansi había estado mirando desde la base del árbol. Dijo, “¿no sería más fácil trepar si te ataras la vasija a tu espalda?” Anansi intentó atar  la vasija de barro llena de sabiduría a su espalda, y realmente fue mucho más fácil.</p>
+<p>Todo este tiempo el joven hijo de Anansi había estado mirando desde la base del árbol. Dijo, “¿no sería más fácil trepar si te ataras la vasija a tu espalda?” Anansi intentó atar la vasija de barro llena de sabiduría a su espalda, y realmente fue mucho más fácil.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Cuento de Ghana<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>Se rompió en pedazos en el suelo. La sabiduría fue libre para que todo el mundo la compartiera. Y así es cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
+<p>Se rompió en pedazos en el suelo. La sabiduría fue libre para que todo el mundo la compartiera. Y es así cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
