--- a/stories/es/0006_anansi_y_la_sabiduría_slides.html
+++ b/stories/es/0006_anansi_y_la_sabiduría_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>Se rompió en pedazos en el suelo. La sabiduría fue libre para que todo el mundo la compartiera. Y así es cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
+<p>Se rompió en pedazos en el suelo. La sabiduría fue libre para que todo el mundo la compartiera. Y es así cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
 <center>
 <strong>6</strong>
 </center>
