--- a/stories/gu/0007_પાનિ-ગોત્વાનુ.html
+++ b/stories/gu/0007_પાનિ-ગોત્વાનુ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>પાનિ ગોત્વાનુ.</title>
+    <title>પાનિ ગોત્વાનુ</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/01.jpg" />
 
-<h1 id="section">પાનિ ગોત્વાનુ.</h1>
+<h1 id="section">પાનિ ગોત્વાનુ</h1>
 
 Augustine Napagi<br>ગુજરાતી</div><div class="pagebreak">
 
