--- a/stories/gu/0007_પાનિ-ગોત્વાનુ_slides.html
+++ b/stories/gu/0007_પાનિ-ગોત્વાનુ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>પાનિ ગોત્વાનુ. - Global African Storybook</title>
+  <title>પાનિ ગોત્વાનુ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="પન-ગતવન." class="slide level1">
-<h1>પાનિ ગોત્વાનુ.</h1>
+<section id="પન-ગતવન" class="slide level1">
+<h1>પાનિ ગોત્વાનુ</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0007/01.jpg" />
 </center>
@@ -132,7 +132,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="પન-ગતવન.-1">પાનિ ગોત્વાનુ.</h2>
+<h2 id="પન-ગતવન-1">પાનિ ગોત્વાનુ</h2>
 <strong>Text:</strong> Augustine Napagi<br> <strong>Illustrations:</strong> Hélder de Paz Alexandre<br> <strong>Translation:</strong> Darshan Soni<br> <strong>Language:</strong> Gujarati<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
