--- a/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે.html
+++ b/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>આશા એક મગફળિ-મખન નું સેંડવિચ છે.</title>
+    <title>આશા એક મગફળિ-મખન નું સેંડવિચ છે</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/01.jpg" />
 
-<h1 id="section">આશા એક મગફળિ-મખન નું સેંડવિચ છે.</h1>
+<h1 id="section">આશા એક મગફળિ-મખન નું સેંડવિચ છે</h1>
 
 Johanna Kistner<br>ગુજરાતી</div><div class="pagebreak">
 
