--- a/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે_slides.html
+++ b/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>આશા એક મગફળિ-મખન નું સેંડવિચ છે. - Global African Storybook</title>
+  <title>આશા એક મગફળિ-મખન નું સેંડવિચ છે - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="આશ-એક-મગફળ-મખન-ન-સડવચ-છ." class="slide level1">
-<h1>આશા એક મગફળિ-મખન નું સેંડવિચ છે.</h1>
+<section id="આશ-એક-મગફળ-મખન-ન-સડવચ-છ" class="slide level1">
+<h1>આશા એક મગફળિ-મખન નું સેંડવિચ છે</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0192/01.jpg" />
 </center>
@@ -105,7 +105,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="આશ-એક-મગફળ-મખન-ન-સડવચ-છ.-1">આશા એક મગફળિ-મખન નું સેંડવિચ છે.</h2>
+<h2 id="આશ-એક-મગફળ-મખન-ન-સડવચ-છ-1">આશા એક મગફળિ-મખન નું સેંડવિચ છે</h2>
 <strong>Text:</strong> Johanna Kistner<br> <strong>Illustrations:</strong> Johanna Kistner<br> <strong>Translation:</strong> Darshan Soni<br> <strong>Language:</strong> Gujarati<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
