--- a/stories/index.html
+++ b/stories/index.html
@@ -910,7 +910,7 @@
     </tr>
     <tr>
       <td>0007</td>
-      <td><a href="/stories/gu/0007_પાનિ-ગોત્વાનુ_slides.html" target="_blank">પાનિ ગોત્વાનુ.</a></td>
+      <td><a href="/stories/gu/0007_પાનિ-ગોત્વાનુ_slides.html" target="_blank">પાનિ ગોત્વાનુ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0007"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -964,7 +964,7 @@
     </tr>
     <tr>
       <td>0098</td>
-      <td><a href="/stories/gu/0098_ગાય-મારો-મિત્ર-છે_slides.html" target="_blank">ગાય મારો મિત્ર છે.</a></td>
+      <td><a href="/stories/gu/0098_ગાય-મારો-મિત્ર-છે_slides.html" target="_blank">ગાય મારો મિત્ર છે</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0098"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -1024,7 +1024,7 @@
     </tr>
     <tr>
       <td>0192</td>
-      <td><a href="/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે_slides.html" target="_blank">આશા એક મગફળિ-મખન નું સેંડવિચ છે.</a></td>
+      <td><a href="/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે_slides.html" target="_blank">આશા એક મગફળિ-મખન નું સેંડવિચ છે</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0192"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
