--- a/audio/es/0008_qué-estás-haciendo_audio-slides.html
+++ b/audio/es/0008_qué-estás-haciendo_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Late veslebror - Global African Storybook</title>
+  <title>¿Qué estás haciendo? - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -60,10 +60,10 @@
      https://developer.mozilla.org/en/CSS/CSS_transitions
      How to use CSS3 Transitions: */
   section {
-      -moz-transition: left 400ms linear 0s;
-      -webkit-transition: left 400ms linear 0s;
-      -ms-transition: left 400ms linear 0s;
-      transition: left 400ms linear 0s;
+      -moz-transition: left 100ms linear 0s;
+      -webkit-transition: left 100ms linear 0s;
+      -ms-transition: left 100ms linear 0s;
+      transition: left 100ms linear 0s;
   }
 
   /* Before */
@@ -87,17 +87,19 @@
 </head>
 <body>
 
-<section id="late-veslebror" class="slide level1">
-<h1>Late veslebror</h1>
+<section id="qué-estás-haciendo" class="slide level1">
+<h1>¿Qué estás haciendo?</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
 </center>
-
+  
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
-<p>Eg står opp og tenner elden.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
+<p>Estoy cantando.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
-<p>Eg kokar vatn.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
+<p>Está despidiéndose.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
-<p>Eg huggar ved.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
+<p>Estoy aplaudiendo.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
-<p>Eg rører i gryta.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
+<p>Está estirándose.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
-<p>Eg feiar golvet.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
+<p>Está llamando.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
-<p>Eg vaskar opp.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
+<p>Estoy respondiendo.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -150,9 +157,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p>Kvifor jobbar eg så hardt ...</p>
-<p>... når broren min berre leikar?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
+<p>Está escuchando.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -160,18 +167,28 @@
 </section>
 <section class="slide level1">
 
-<h2 id="late-veslebror-1">Late veslebror</h2>
-<strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrasjonar:</strong> Mlungisi Dlamini<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
+<p>¿Qué estás haciendo?</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/gasp-audio/master/es/0008_qué-estás-haciendo/mp3/09.mp3" type="audio/mpeg"> </audio>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="qué-estás-haciendo-1">¿Qué estás haciendo?</h2>
+<strong>Texto:</strong> Nina Orange<br> <strong>Ilustración:</strong> Wiehan de Jager<br> <strong>Traducción:</strong> dohliam<br> <strong>Idioma:</strong> Español<br> <strong>Read by:</strong> Áurea Vericat<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/lazy-little-brother'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
@@ -264,8 +281,8 @@ You can view the original story on the ASP website <a href='http://my.africansto
       Dz.params[keyVal[0]] = decodeURIComponent(keyVal[1]);
     });
   // Specific params handling
-    if (!+this.params.autoplay)
-      $$.forEach($$("video"), function(v){ v.controls = true });
+//     if (!+this.params.autoplay)
+//       $$.forEach($$("video"), function(v){ v.controls = true });
   }
 
   Dz.onkeydown = function(aEvent) {
@@ -400,6 +417,16 @@ You can view the original story on the ASP website <a href='http://my.africansto
           video.play();
         } else {
           video.pause();
+          video.currentTime = 0;
+        }
+      }
+      var audio = s.$("audio");
+      if (audio) {
+        if (audio.ended || audio.paused) {
+          audio.play();
+        } else {
+          audio.pause();
+          audio.currentTime = 0;
         }
       }
     }
@@ -479,6 +506,12 @@ You can view the original story on the ASP website <a href='http://my.africansto
       var video = old.$("video");
       if (video) {
         video.pause();
+        video.currentTime = 0;
+      }
+      var audio = old.$("audio");
+      if (audio) {
+        audio.pause();
+        audio.currentTime = 0;
       }
     }
     if (next) {
@@ -486,6 +519,10 @@ You can view the original story on the ASP website <a href='http://my.africansto
       var video = next.$("video");
       if (video && !!+this.params.autoplay) {
         video.play();
+      }
+      var audio = next.$("audio");
+      if (audio && !!+this.params.autoplay) {
+        audio.play();
       }
     } else {
       // That should not happen
