--- a/audio/es/0253_mi-libro-ilustrado_audio-slides.html
+++ b/audio/es/0253_mi-libro-ilustrado_audio-slides.html
@@ -138,7 +138,7 @@
 <section class="slide level1">
 
 <h2 id="mi-libro-ilustrado-1">Mi libro ilustrado</h2>
-<strong>Texto:</strong> Oku Modesto<br> <strong>Ilustración:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Traducción:</strong> Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br> <strong>Read by:</strong> Espen Stranger-Johannessen<br>
+<strong>Texto:</strong> Oku Modesto<br> <strong>Ilustración:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>Traducción:</strong> Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br> <strong>Read by:</strong> Áurea Vericat<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
