--- a/stories/es/0087_me-gusta-leer.html
+++ b/stories/es/0087_me-gusta-leer.html
@@ -91,7 +91,7 @@ Letta Machoga<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
 
-<p>Mi padre y abuelo están ocupados.</p>
+<p>Mi padre y mi abuelo están ocupados.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
