--- a/stories/es/0087_me-gusta-leer_slides.html
+++ b/stories/es/0087_me-gusta-leer_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
-<p>Mi padre y abuelo están ocupados.</p>
+<p>Mi padre y mi abuelo están ocupados.</p>
 <center>
 <strong>7</strong>
 </center>
