--- a/stories/gu/0098_ગાય-મારો-મિત્ર-છે.html
+++ b/stories/gu/0098_ગાય-મારો-મિત્ર-છે.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ગાય મારો મિત્ર છે.</title>
+    <title>ગાય મારો મિત્ર છે</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0098/01.jpg" />
 
-<h1 id="section">ગાય મારો મિત્ર છે.</h1>
+<h1 id="section">ગાય મારો મિત્ર છે</h1>
 
 Frista, Fatima<br>ગુજરાતી</div><div class="pagebreak">
 
