--- a/stories/gu/0098_ગાય-મારો-મિત્ર-છે_slides.html
+++ b/stories/gu/0098_ગાય-મારો-મિત્ર-છે_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ગાય મારો મિત્ર છે. - Global African Storybook</title>
+  <title>ગાય મારો મિત્ર છે - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="ગય-મર-મતર-છ." class="slide level1">
-<h1>ગાય મારો મિત્ર છે.</h1>
+<section id="ગય-મર-મતર-છ" class="slide level1">
+<h1>ગાય મારો મિત્ર છે</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0098/01.jpg" />
 </center>
@@ -132,7 +132,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ગય-મર-મતર-છ.-1">ગાય મારો મિત્ર છે.</h2>
+<h2 id="ગય-મર-મતર-છ-1">ગાય મારો મિત્ર છે</h2>
 <strong>Text:</strong> Frista, Fatima<br> <strong>Illustrations:</strong> Marleen Visser, Felicity Bell<br> <strong>Translation:</strong> Darshan Soni<br> <strong>Language:</strong> Gujarati<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
